changes on index.html and index.css. The changes include adding a new link to the projects page in the navigation bar, updating the background styling of the body to include a semi-transparent overlay, and adjusting the line height of the introductory text for better readability. Additionally, there are some minor adjustments to the footer styling to ensure it stays at the bottom of the page.

--- a/index.css
+++ b/index.css
@@ -3,6 +3,21 @@
         grid-template-columns: 1fr;
         text-align: center;
     }
+    .hero > .intro {
+        order: 1;
+        margin-bottom: 20px;
+
+    }
+    .hero > .intro > .my-info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+.hero > .intro > .my-info p{
+    margin: 0;
+    line-height: 2.2;
+}
     .hero > .image {
         order: -1;
         margin-bottom: 20px;
@@ -11,6 +26,7 @@
 
 body{
     background-image: url("images/pc.jpeg");
+    background: rgba(0, 0, 0, 0.75) rgba(0, 0, 0, 0.75) url("images/pc.jpeg") no-repeat center center fixed;
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
@@ -110,7 +126,8 @@ body{
     display: flex;
     justify-content: center;
     padding: 20px 40px ;
-    
+    position: relative;
+    bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);
 }
 .lower-bar > p{
